--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.1.2",
     "@angular/platform-browser-dynamic": "^5.1.2",
     "@angular/router": "^5.1.2",
+    "@angular/service-worker": "^5.1.2",
     "apollo-angular": "^1.0.0",
     "apollo-angular-link-http": "^1.0.1",
     "apollo-cache-inmemory": "^1.1.4",
