--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "baseUrl": "src",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -14,6 +15,13 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@app/core/*": ["app/core/*"],
+      "@app/views/*": ["app/views/*"],
+      "@app/store/*": ["app/store/*"],
+      "@app/store": ["app/store/index"],
+      "@app/env": ["environments/environment"]
+    }
   }
 }
