--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "font-awesome": "^4.7.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
+    "mime": "^2.1.0",
+    "mime-type": "^3.0.5",
+    "mime-types": "^2.1.17",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -42,6 +45,7 @@
     "@types/codemirror": "^0.0.53",
     "@types/jasmine": "^2.8.3",
     "@types/jasminewd2": "^2.0.3",
+    "@types/mime": "^2.0.0",
     "@types/node": "^8.5.2",
     "codelyzer": "^3.2.2",
     "jasmine-core": "^2.8.0",
