--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
-    "baseUrl": "./",
+    "graphqlUrl": "./",
     "module": "commonjs",
     "target": "es5",
     "types": [
