--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "graphqlUrl": "./",
+    "baseUrl": "./",
     "module": "es2015",
     "types": []
   },
